--- a/models/staging/_stg_sources.yml
+++ b/models/staging/_stg_sources.yml
@@ -67,6 +67,9 @@ sources:
             description: The price of the market product.
             data_tests:
               - not_null
+              - unique:
+                  config:
+                    where: "price > 0"
           - name: stock_availability
             description: The stock availability of the market product.
             data_tests:
