adding metrics in the fct tables + table as materialized

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -36,5 +36,9 @@ models:
   dbt_lengow:
     staging:
       +materialized: incremental
+    intermediate:
+      +materialized: incremental
+    marts:
+      +materialized: table
 
     
